wip/dev: building layout && components

--- a/frontend/assets/scss/main.scss
+++ b/frontend/assets/scss/main.scss
@@ -1,3 +1,8 @@
+@import "./variables/import";
+@import "./layout/import";
+@import "./components/import";
+@import "./pages/import";
+
 body {
   margin: 0;
 }
