--- a/frontend/assets/scss/components/post-preview.scss
+++ b/frontend/assets/scss/components/post-preview.scss
@@ -3,6 +3,16 @@
     display: flex;
   }
 
+  &__text {
+    min-width: 250px;
+    width: 250px;
+  }
+
+  &__image {
+    width: 100%;
+    
+  }
+
   &__badge {
     padding: 4px 8px;
     text-transform: uppercase;
