--- a/frontend/assets/scss/pages/index.scss
+++ b/frontend/assets/scss/pages/index.scss
@@ -10,4 +10,10 @@
     font-weight: 400;
     color: $neutral-50;
   }
+
+  &__posts {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+  }
 }
